<resources>
    <string name="app_name">TAGD</string>
    <string name="btnSignIn">sign in with xbox live</string>
    <string name="textViewIntro">RATE GAMERS//REK NOOBS</string>
    <string name="enterGT">Enter Gamertag</string>
    <string name="enterPW">Enter Password</string>
    <string name="signIn">Sign In</string>
    <string name="signInButton">Get Started!</string>
    <string name="keepSigned">Keep me signed in</string>
    <string name="agreeToTerms">I agree to the terms.</string>
    <string name="signUp">Sign Up</string>
    <string name="email">Enter E-mail</string>
    <string name="verification">Enter Verification Code</string>
    <string name="verify">Get Verified!</string>
    <string name="reverify">Back to Verification</string>
    <string name="comment">Comment Here</string>
    <string name="sendComment">Send!</string>
    <string name="logout_dialog">Are you sure you want to log out?</string>
    <string name="logout_yes">Log Out</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_title">Logout?</string>

    <string name="testGT">EPICHippoMan</string>
    <string name="commentEx">He was very helpful and knew what he was doing,
        even helped me find the calcified fragment I was looking for!
    </string>
    <string name="unVerified">I\'m sorry, but you could not be verified at this moment.
        Please check that your information is correct, or try again later!
    </string>
    <string name="notVerified">Testing</string>

    <string name="tagdProject">About the TAGD Project</string>
    <string name="DINfont"/>
    <string name="loading">Loading Fallout 4</string>
    <string name="hashtag">#onewordhashtags</string>

    //this is for dialog building
    <string name="action_add">add</string>
    <string name="title_hint">Title</string>
    <string name="description_hint">Description</string>
    <string name="idea_checkbox">Idea</string>
    <string name="important_checkbox">Important</string>
    <string name="todo_checkbox">To do</string>
    <string name="cancel_button">Cancel</string>
    <string name="ok_button">OK</string>

    <string name="sound_checkbox">On or Off</string>
    <string name="settings_title">Settings</string>
    <string name="sound_title">Sound</string>
    <string name="anims_title">Animation Speed</string>
    <string name="rb_fast">Fast</string>
    <string name="rb_slow">Slow</string>
    <string name="rb_none">None</string>
    <string name="app_label">Search</string>
    <string name="search_hint">Search Me</string>
    <string name="search">Search</string>

    //about section text
    <string name="aboutThisApp">This app was started for those who take gaming seriously.
        The TAGD Project is an attempt to put accountability into our online behaviors, so that
        everyone who plays is not restricted by rules put in place to punish the outcasts.
        Help spread the word by leaving good reviews, and please tell your friends!
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
