<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundGrey">

    <TextView
        android:text="@string/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:id="@+id/txtSignUp"
        android:textSize="36sp"
        android:textColor="@android:color/darker_gray"/>
    <EditText
        android:layout_width="380dp"
        android:layout_height="55dp"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/signUpGamertag"
        android:background="@drawable/textfield_shape_greyandgreen"
        android:layout_below="@+id/txtSignUp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:textAlignment="textStart"
        android:textColor="#f3f3f3" android:paddingLeft="10dp" android:paddingRight="10dp"/>
    <TextView
        android:text="@string/enterGT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textEnterGt2"
        android:layout_below="@+id/signUpGamertag"
        android:layout_alignStart="@+id/signUpGamertag"
        android:paddingTop="7dp"
        android:textColor="@android:color/darker_gray"/>
    <EditText
        android:layout_width="380dp"
        android:layout_height="55dp"
        android:ems="10"
        android:id="@+id/signUpEmail"
        android:background="@drawable/textfield_shape_greyandgreen"
        android:layout_below="@+id/textEnterGt2"
        android:layout_alignStart="@+id/textEnterGt2"
        android:layout_marginTop="30dp"
        android:inputType="textEmailAddress"
        android:textAlignment="textStart" android:paddingLeft="10dp" android:paddingRight="10dp"
        android:textColor="#f3f3f3"/>
    <TextView
        android:text="@string/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signUpEmail"
        android:layout_alignStart="@+id/signUpEmail"
        android:id="@+id/textViewEmail"
        android:layout_marginBottom="30dp"
        android:paddingTop="7dp"
        android:textColor="@android:color/darker_gray"/>
    <EditText
        android:layout_width="380dp"
        android:layout_height="55dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/signUpPassword"
        android:background="@drawable/textfield_shape_greyandgreen"
        android:layout_below="@+id/textViewEmail"
        android:layout_alignStart="@+id/textViewEmail"
        android:textAlignment="textStart" android:paddingLeft="10dp" android:paddingRight="10dp"
        android:textColor="#f3f3f3"/>
    <TextView
        android:text="@string/enterPW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewPassword"
        android:layout_below="@+id/signUpPassword"
        android:layout_alignStart="@+id/signUpPassword"
        android:paddingTop="7dp"
        android:textColor="@android:color/darker_gray"/>
    <Button
        android:text="@string/verify"
        android:layout_width="175dp"
        android:layout_height="55dp"
        android:id="@+id/btnGetVerified"
        android:background="@drawable/buttonshape3"
        android:layout_marginBottom="56dp"
        android:textAllCaps="false"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:onClick="verifyGT"
    />
</RelativeLayout>